--- a/src/assets/locales/zh-CN/translation.json
+++ b/src/assets/locales/zh-CN/translation.json
@@ -38,15 +38,15 @@
     "room-disconnected-participant-removed": "您已经从此会议中移除。代码： {{code}}",
     "room-disconnected-room-ended": "该房间已断开连接。原因： {{code}}",
     "room-disconnected-state-mismatch": "状态不匹配。代码: {{code}}",
-    "room-disconnected-reconnecting": "Room disconnected, reconnecting...",
-    "your-connection-quality-not-good": "Your connection quality isn't good enough",
+    "room-disconnected-reconnecting": "该房间已经断开连接，正在重试连接中...",
+    "your-connection-quality-not-good": "网络连接质量不佳",
     "need-to-disable-display-external-link": "Display External Link is turned on. Please stop it before launching External Media Player.",
     "need-to-disable-external-media-player": "External Media Player is turned on. Please stop it before launching Display External Link.",
     "websocket-disconnected": "Websocket disconnected, reconnecting..",
-    "websocket-error": "Error in Websocket.",
-    "websocket-not-connected": "Websocket isn't connected. Messages won't deliver.",
-    "room-will-end-in": "This room will be ended in {{minutes}} minutes",
-    "e2ee-unsupported-browser-title": "Unsupported browser",
+    "websocket-error": "Websocket连接错误",
+    "websocket-not-connected": "Websocket没有连接上，无法发送消息。",
+    "room-will-end-in": "该会议即将在{{minutes}}分钟后结束",
+    "e2ee-unsupported-browser-title": "浏览器无法支持，请更新浏览器",
     "e2ee-unsupported-browser-msg": "This session has enabled end-to-end encryption which your current browser doesn't support."
   },
   "room-metadata": {
@@ -56,10 +56,10 @@
     "rtmp-stopped": "此会议停止使用RTMP进行直播"
   },
   "header": {
-    "hide-header": "Hide header",
-    "show-header": "Show header",
-    "room-audio-volume": "Room audio",
-    "room-screen-share-audio-volume": "Room screen share audio",
+    "hide-header": "隐藏导航栏",
+    "show-header": "显示导航栏",
+    "room-audio-volume": "房间音量",
+    "room-screen-share-audio-volume": "房间屏幕共享音量",
     "menus": {
       "settings": "设置",
       "keyboard-shortcuts": "快捷键",
@@ -83,20 +83,20 @@
       "language": "语言",
       "video-quality": "视频质量",
       "high": "高",
-      "medium": "中等",
+      "medium": "中",
       "low": "低",
       "enable-dark-theme": "应用深色主题",
-      "video-object-fit": "Video object fit",
-      "video-object-fit-cover": "Cover",
-      "video-object-fit-contain": "Contain",
-      "column-camera-width": "Column camera width",
-      "column-camera-width-default": "Default",
-      "column-camera-width-medium": "Medium",
-      "column-camera-width-small": "Small",
-      "column-camera-position": "Column camera position",
-      "column-camera-position-left": "Left",
-      "column-camera-position-top": "Top",
-      "column-camera-position-bottom": "Bottom"
+      "video-object-fit": "视频显示模式",
+      "video-object-fit-cover": "铺满",
+      "video-object-fit-contain": "缩放",
+      "column-camera-width": "摄像头宽度",
+      "column-camera-width-default": "默认",
+      "column-camera-width-medium": "中",
+      "column-camera-width-small": "小",
+      "column-camera-position": "摄像头位置",
+      "column-camera-position-left": "靠左",
+      "column-camera-position-top": "靠上",
+      "column-camera-position-bottom": "靠下"
     },
     "keyboard-shortcuts": {
       "title": "键盘快捷键",
@@ -130,7 +130,7 @@
     "connected": "已连接",
     "ready": "就绪",
     "webcams-per-page": "Per page.",
-    "require-ssl-title": "Domain must be SSL enabled",
+    "require-ssl-title": "域名必须启用https",
     "require-ssl-des": "It is required to use an SSL-enabled domain other than localhost."
   },
   "left-panel": {
@@ -194,8 +194,8 @@
     "chat-box-placeholder": "写消息 (换行: Shift + enter)"
   },
   "footer": {
-    "hide-footer": "Hide footer",
-    "show-footer": "Show footer",
+    "hide-footer": "隐藏操作栏",
+    "show-footer": "显示操作栏",
     "icons": {
       "start-webcam": "启用摄像头",
       "leave-webcam": "关闭摄像头",
@@ -242,7 +242,7 @@
       "manage-breakout-room": "管理分组房间",
       "start-display-external-link": "显示外部链接",
       "stop-display-external-link": "停止显示外部链接",
-      "speech-to-text-settings": "Speech to text/translation settings"
+      "speech-to-text-settings": "语音转文字设置"
     },
     "notice": {
       "already-active-screen-sharing": "已经有一个屏幕在分享",
@@ -374,7 +374,7 @@
     "url": "URL",
     "display": "显示",
     "link-invalid": "链接无效",
-    "note": "注意：请确保URL有权在 iframe 中打开。例如：https://www.gameflare.com/embed/mini-survive。",
+    "note": "注意：请确保URL有权在 iframe 中打开。",
     "send-extra-values": "同步额外信息",
     "name": "名字",
     "name-des": "用户全名",
@@ -386,38 +386,38 @@
     "user-role-des": "用户当前角色。管理员或参与者"
   },
   "ingress-features": {
-    "ingress-type": "Ingress type",
+    "ingress-type": "输入类型",
     "ingress-type-rtmp": "RTMP",
     "ingress-type-whip": "WHIP",
-    "join-as-name": "Join as name",
+    "join-as-name": "加入名称",
     "feature-not-allow": "Feature not allow",
-    "join-as-name-required": "Join as name required",
-    "gen-link": "Generate link",
+    "join-as-name-required": "加入名称必填",
+    "gen-link": "生成链接",
     "stream-url": "Stream Host/URL",
     "stream-key": "Stream key/secret"
   },
   "speech-services": {
-    "modal-settings-title": "Speech to text/translation settings",
-    "enable-speech-to-text": "Enable speech to text",
-    "speech-langs-label": "Speech languages",
-    "speech-users-label": "Speech users",
-    "subtitle-font-size": "Subtitle font size",
-    "enable-translation": "Enable translation",
-    "translation-langs-label": "Translation languages",
-    "default-subtitle-lang-label": "Default subtitle language",
-    "enable-service": "Enable service",
-    "speech-user-required": "At least one speech user require",
-    "speech-lang-required": "At least one speech language require",
-    "translation-lang-required": "At least one translation language or 2 speech languages required",
-    "service-ready": "Speech service is ready",
-    "start-service": "Start",
-    "stop-service": "Stop",
-    "update-service": "Update",
-    "service-stopped": "Service has been stopped",
-    "start-modal-title": "Speech to text/translation service",
-    "speech-lang-label": "Speech language",
+    "modal-settings-title": "语音转译设置",
+    "enable-speech-to-text": "启用语音转译",
+    "speech-langs-label": "语音语言",
+    "speech-users-label": "发言用户",
+    "subtitle-font-size": "字幕字体大小",
+    "enable-translation": "启用语言翻译",
+    "translation-langs-label": "翻译为",
+    "default-subtitle-lang-label": "默认字幕语言",
+    "enable-service": "启用服务",
+    "speech-user-required": "至少需要选择一个用户",
+    "speech-lang-required": "至少需要选择一种语言",
+    "translation-lang-required": "至少需要选择一个需要被翻译的语言",
+    "service-ready": "语音服务已可用",
+    "start-service": "启动服务",
+    "stop-service": "停止服务",
+    "update-service": "更新服务",
+    "service-stopped": "服务已停止",
+    "start-modal-title": "语音转译服务",
+    "speech-lang-label": "语音语言",
     "subtitle-lang-label": "Subtitle language",
-    "subtitle-settings": "Subtitle settings",
+    "subtitle-settings": "字幕设置",
     "status-change-error": "Something went wrong during status change. Please try again. Error {{error}}",
     "speech-to-text-ready": "Service started. You can start speaking now.",
     "already-received-token": "You've already received token. Need to wait 5 minutes before generating new one.",
